--- a/app/components/tracked-task/template.hbs
+++ b/app/components/tracked-task/template.hbs
@@ -1,1 +1,96 @@
 {{yield}}
+{{!-- <div class='blocks'>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}{{time-block isMouseDown=isMouseDown}}{{time-block isMouseDown=isMouseDown}}{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+  <div class='hour-block'> --}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{time-block isMouseDown=isMouseDown}}
+{{!-- </div>
+</div> --}}
